--- a/examples/blog_example/dddml/blog.yaml
+++ b/examples/blog_example/dddml/blog.yaml
@@ -1,7 +1,7 @@
 aggregates:
   Article:
     metadata:
-      Preprocessors: ["CRUD_IT"]
+      Preprocessors: ["MOVE_CRUD_IT"]
     id:
       name: Id
       type: ObjectID
@@ -30,27 +30,27 @@ aggregates:
             length: 500
 
     methods:
-      Create:
-        isCreationCommand: true
-        event:
-          name: ArticleCreated
-        parameters:
-          Title:
-            type: String
-            length: 200
-          Body:
-            type: String
-            length: 2000
-      Update:
-        event:
-          name: ArticleUpdated
-        parameters:
-          Title:
-            type: String
-            length: 200
-          Body:
-            type: String
-            length: 2000
+#      Create:
+#        isCreationCommand: true
+#        event:
+#          name: ArticleCreated
+#        parameters:
+#          Title:
+#            type: String
+#            length: 200
+#          Body:
+#            type: String
+#            length: 2000
+#      Update:
+#        event:
+#          name: ArticleUpdated
+#        parameters:
+#          Title:
+#            type: String
+#            length: 200
+#          Body:
+#            type: String
+#            length: 2000
       Delete:
         event:
           name: ArticleDeleted
