update blog_example models

--- a/examples/blog_example/dddml/blog.yaml
+++ b/examples/blog_example/dddml/blog.yaml
@@ -13,23 +13,23 @@ aggregates:
       Body:
         type: String
         length: 2000
-#      Comments:
-#        itemType: Comment
-#
-#    entities:
-#      Comment:
-#        id:
-#          name: CommentSeqId
-#          type: u64
-#        properties:
-#          Commenter:
-#            type: String
-#            length: 100
-#          Body:
-#            type: String
-#            length: 500
+      Comments:
+        itemType: Comment
 
-    methods:
+    entities:
+      Comment:
+        id:
+          name: CommentSeqId
+          type: u64
+        properties:
+          Commenter:
+            type: String
+            length: 100
+          Body:
+            type: String
+            length: 500
+
+#    methods:
 #      Create:
 #        isCreationCommand: true
 #        event:
