add update-comment logic

--- a/examples/blog_example/dddml/blog.yaml
+++ b/examples/blog_example/dddml/blog.yaml
@@ -76,3 +76,15 @@ aggregates:
 #        parameters:
 #          CommentSeqId:
 #            type: u64
+      UpdateComment:
+        event:
+          name: CommentUpdated
+        parameters:
+          CommentSeqId:
+            type: u64
+          Commenter:
+            type: String
+            length: 100
+          Body:
+            type: String
+            length: 500
