--- a/examples/blog/dddml/blog.yaml
+++ b/examples/blog/dddml/blog.yaml
@@ -13,10 +13,10 @@ aggregates:
       Body:
         type: String
         length: 2000
-      Owner:
-        type: address
       Comments:
         itemType: Comment
+#      Owner:
+#        type: address
 
     entities:
       Comment:
@@ -41,14 +41,6 @@ aggregates:
       # Once the `*_logic.move` files are generated, the tool does not overwrite them by default.
       # By writing the simple verification logic here, the `*_logic.move` file can be deleted and regenerated when the model changes.
       # ------------------------------------------------------------------------------------------------------
-      Update:
-        verificationLogic:
-          Move:
-            "assert!(std::signer::address_of(account) == article::owner(article_obj), 111);"
-      Delete:
-        verificationLogic:
-          Move:
-            "assert!(std::signer::address_of(account) == article::owner(article_obj), 111);"
       UpdateComment:
         verificationLogic:
           Move:
@@ -72,6 +64,15 @@ aggregates:
           Body:
             type: String
 
+#      Update:
+#        verificationLogic:
+#          Move:
+#            "assert!(std::signer::address_of(account) == article::owner(article_obj), 111);"
+#      Delete:
+#        verificationLogic:
+#          Move:
+#            "assert!(std::signer::address_of(account) == article::owner(article_obj), 111);"
+
 singletonObjects:
   Blog:
     metadata:
@@ -80,3 +81,18 @@ singletonObjects:
       Name:
         type: String
         length: 200
+      Articles:
+        itemType: ObjectID
+#    methods:
+#      AddArticle:
+#        event:
+#          name: ArticleAddedToBlog
+#        parameters:
+#          ArticleId:
+#            type: ObjectID
+#      RemoveArticle:
+#        event:
+#          name: ArticleRemovedFromBlog
+#        parameters:
+#          ArticleId:
+#            type: ObjectID
